--- a/devdacticGmail/src/theme/variables.scss
+++ b/devdacticGmail/src/theme/variables.scss
@@ -77,9 +77,9 @@
   --ion-color-light-tint: #f5f6f9;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: white) {
   /*
-   * Dark Colors
+   * Dark Colors // change
    * -------------------------------------------
    */
 
