--- a/devdacticGmail/src/app/pages/mail/mail.page.html
+++ b/devdacticGmail/src/app/pages/mail/mail.page.html
@@ -1,5 +1,5 @@
 <ion-content scrollEvents="true" [appHideHeader]="search">
-  <div class="search-overlay ion-align-items-center" slot="fixed" #search>
+  <div class="search-overlay ion-align-items-center" #search>
     <ion-row>
       <ion-col size="2">
         <ion-menu-button color="dark"></ion-menu-button>
